ARROW-14192: Added a merge generator that will still allow some file readahead but won't allow backpressure to explode if scanning in a sequenced fashion.